--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+# docker-compose.yml
+# Usage:
+#   export PAYID_DOCKER_IMAGE_VERSION=$(node -p "require('./package.json').version")
+#   docker-compose up -d --build
 version: '3'
 services:
   payid_server:
